test/data-exporter-backend/data-exporter-backend-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-exporter-backend-service
spec:
  selector:
    app: data-exporter-backend
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: data-exporter-backend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.dissco.tech`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: data-exporter-backend-service
          namespace: default
          port: 8080
      middlewares:
        - name: data-exporter-backend-cors-headers
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: data-exporter-backend-cors-headers
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
